--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ steps:
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
 - task: Veracode@3
+  displayName: Connect Veracode
   inputs:
     ConnectionDetailsSelection: 'Endpoint'
     AnalysisService: 'apiveracode'
